js/js.translator/testData/incremental/invalidation/crossModuleObjectInitialization/lib1/l1.1.kt
object X {
    var result = "0"
    init {
        result = "1"
    }
}
